--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <html>
 <body>
 
-<h2>An Unordered HTML List</h2>
-
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  
-
-<h2>An Ordered HTML List</h2>
-
-<ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol> 
+<h2>Hello From Redberry!</h2>
+<p>This is a test website for testing out github-pages, if you see this that means it's working 🎆🎆🎆</p>
 
 </body>
 </html>
-
